testdata/zkc/invalid/constant_invalid_03.zkc
;;error:2:20-25:unknown symbol
const u8 LARGEPO = LARGE+1
